Implementação do FactoryMethod
foi modificado o a classe Livro para ser uma subclasse de Produto, gerado uma classe ProdutoFactory para servir de Factory Method pra gerar um Produto tipo Livro. Apenas as classes Pedido e PedidoService q utilizam disso, de resto se mantem inalterado.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,6 +3,13 @@
   "version": "0.2.0",
   "configurations": [
     {
+      "type": "java",
+      "name": "SpringEcommerceLivrosApplication",
+      "request": "launch",
+      "mainClass": "com.pom.spring_ecommerce_livros.SpringEcommerceLivrosApplication",
+      "projectName": "spring-ecommerce-livros"
+    },
+    {
       "name": "ng serve",
       "type": "chrome",
       "request": "launch",
